# loclean

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTION.md  LIBRARY_SUMMARY.md  MIGRATION_TO_NEXTRA.md  README.md  SECURITY.md  main.py  pyproject.toml
.agent/: README.md
.agent/rules/: project-overview.md  readme-guidelines.md  ruff-mypy-pytest.md
.github/: CODEOWNERS
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  chore.md  docs.md  feature_refactor.md
.github/workflows/: ci.yml  commit_lint.yml  deploy_docs.yml  publish.yml  runtime.yml
docs-web/: README.md  next.config.mjs  package-lock.json  package.json
docs-web/scripts/: lint.ts
examples/: 01-quick-start.ipynb  02-data-cleaning.ipynb  03-privacy-scrubbing.ipynb  04-structured-extraction.ipynb  05-debug-mode.ipynb  06-entity-resolution.ipynb  07-oversampling.ipynb  08-log-shredding.ipynb  09-feature-discovery.ipynb  10-quality-validation.ipynb  11-kaggle-housing-pipeline.ipynb  12-log-engineering-pipeline.ipynb  13-trap-pruning.ipynb  14-missingness-recognition.ipynb  15-leakage-auditing.ipynb  16-instruction-optimization.ipynb  README.md  basic_usage.py  benchmark.py  eval_demo.py
semantix/inference/: manager.py
src/loclean/: README.md  __init__.py  _version.py  cache.py
src/semantix/: __init__.py  _version.py  cache.py
tests/: README.md  conftest.py
tests/integration/: test_core.py  test_reasoning.py
tests/unit/: test_cache.py  (+3 more)
website/: README.md  TESTING.md  astro.config.mjs  migrate_content.py  next.config.js  next.config.mjs  package-lock.json  package.json  theme.config.tsx  tsconfig.json
(+251 files in other folders)
